# pyCXIM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
detector_mask/: 1w1a_pilatus_mask.npy  badpix_mask.tif  id01_maxipix_mask.npy  id05_pilatus_mask.npy  nanomax_merlin_mask.npy
doc/: ~$ase retrieval with Maxwell cluster.docx  ~WRL0003.tmp
example/: phase retrieval_2D.py  phase_retrieval_Maxwell_step1.py  phase_retrieval_Maxwell_step2.py  phase_retrieval_PyNX_step2.py
pyCXIM/: __init__.py
pyCXIM/Common/: Information_file_generator.py
pyCXIM/RSM/: CDI2RSM.py  Calibraction_6C.py  Calibration_6C.py  RC2RSM.py  RC2RSM_2C.py  RC2RSM_6C.py  RSM_2C.py  RSM_6C.py  RSM_post_processing.py  TT2RSM.py
pyCXIM/nanomax_scan_reader/: nanomax_merlin_reader.py  nanomax_scan_reader.py
pyCXIM/p08_scan_reader/: p08_eiger_reader.py  p08_scan_reader.py
pyCXIM/p10_scan_reader/: p10_eiger_reader.py  p10_fluo_reader.py  p10_scan_reader.py
pyCXIM/phase_retrieval/: phase_retrieval_GPU.py  phase_retrieval_numpy.py  phase_retrieval_post_processing.py  phase_retrieval_widget.py
pyCXIM/scan_reader/: general_detector.py  general_scan.py  general_structure.py
scripts/Alignment/: 1W1A_calibration.py  EWEA_calibration.py  P10_alignment_scripts.py  P10_correct_center_of_rotation  p08_calibration.py  p10_calibration.py
scripts/RSM_conversion/: 1W1A_3D_RSM_6C.py  BSRF_1W1A_3D_RSM_6C.py  DESY_P08_3D_RSM_2C.py  DESY_P10_3D_RSM_6C.py  DESY_P10_BCDI_preparation_2C.py  DESY_P10_BCDI_preparation_powder.py  DESY_P10_CDI_preparation.py  P08_3D_RSM_2C.py  (+14 more)
tests/: Q2DEG_6C.py
(+43 files in other folders)
