[project]
name = "pyCXIM"
version = "0.1.0"
description = "Python scripts for coherent X-ray imaging methods"
authors = [
    { name = "Zhe Ren", email = "nzhe@ihep.ac.cn" },
    { name = "Han Xu", email = "xuhan@ihep.ac.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "hdf5plugin>=6.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "vtk>=9.5.2",
]
license = "Apache-2.0"
packages = ["pyCXIM"]

[project.optional-dependencies]
gpu = [
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyCXIM"
module-root = ""
